[gd_scene load_steps=3 format=3 uid="uid://dv31w2im3351c"]

[ext_resource type="Script" path="res://scripts/bullet_enemy.gd" id="1_6vje8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t4mg6"]

[node name="bullet_enemy" type="Area2D" groups=["bullet", "bullet_enemy"]]
collision_layer = 8
collision_mask = 673
script = ExtResource("1_6vje8")

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_t4mg6")

[node name="sprite" type="ColorRect" parent="."]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(1, 1, 0, 1)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="." groups=["bullet_enemy"]]
enable_node_path = NodePath("")

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
